# zero2prodx

./: Cargo.toml  Dockerfile  spec.yaml
migrations/: 20250219022150_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_test.rs
